--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 # Add steps that analyze code, save build artifacts, deploy, and more:
 # https://docs.microsoft.com/azure/devops/pipelines/languages/java
 
-#manoj kumar singh testing pull requst one uda, commiting to testing again, phir se
+#manoj kumar singh testing pull requst one uda
 
 
 trigger:
